<resources>
    <string name="app_name">UI-Project</string>
    <string name="movie_title">The Avengers: End-Game</string>
    <string name="movie_description">The overwhelming devastation caused by the mad Titan Thanos has left what remains of the Avengers reeling. For a while, all hope seems lost… until an opportunity to reverse the damage is presented. Now, the team must assemble once more and do whatever it takes to restore the universe and bring those they lost back.</string>
    <string name="desc_title">Description</string>
    <string name="images_title">Movie Images</string>
    <string name="order_tickets_title">Order tickets</string>
    <string name="next_button_description">next photo</string>
    <string name="previous_button_description">prev photo</string>
    <string name="selected_date">No date selected</string>
    <string name="choose_date">Choose Date</string>
    <string name="number_of_tickets">Number of Tickets</string>
    <string name="select_date">Select Date</string>
    <string name="ticket_type_title">Ticket Type</string>
    <string name="adult_choice">Adult</string>
    <string name="child_choice">Child</string>
    <string name="submit_order_btn">Get Tickets</string>
    <string name="select_theater_title">Select Theater</string>
    <string name="date_picker_icon">date picker</string>
    <string name="num_of_tickets">0 tickets selected</string>
    <string name="time_dialog_title">Pick a screening time!</string>
    <string name="pick_btn">Pick</string>
    <string name="tickets">Tickets: %d</string>
    <string name="confirm_order_btn">Confirm Order</string>
    <string name="total_amount">37$</string>
    <string name="order_sum_text">Order Sum:</string>
    <string name="theater_val">Cinema-City Tel-Aviv</string>
    <string name="teather_text">Theater:</string>
    <string name="type_val">Adult</string>
    <string name="type_text">Tickets Type:</string>
    <string name="time_val">12/12/2012 - 18:00</string>
    <string name="time_text">Screening Time:</string>
    <string name="ticket_count_val">12</string>
    <string name="ticket_count_text">Tickets Amount:</string>
    <string name="movie_name_text">Movie Name:</string>
    <string name="order_confirmation_title">Order Confirmation</string>
    <string name="adult_price">/30$</string>
    <string name="child_price">/15$</string>
    <string name="glilot">Cinema-City Glilot</string>
    <string name="c_Telaviv">Cinema-City Tel-Aviv</string>
    <string name="cinimatek">Cinimatek Tel-Aviv</string>
    <string name="yes_planet">Yes-Planet Tel-Aviv</string>
    <string name="missing_fields">Please fill the following fields:</string>
    <string name="time">Time</string>
    <string name="order_confirmed">Order Confirmed! 🥳</string>
    <string name="theme">Theme</string>
    <string name="currency">%s $</string>
    <string name="exit">exit</string>
    <string name="space_man">space-man</string>
</resources>